[package]
name = "json-rpc-types"
version = "1.0.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Type definitions for JSON-RPC"
readme = "README.md"
repository = "https://github.com/DoumanAsh/json-rpc-types"
license = "BSL-1.0"
keywords = ["json-rpc", "jsonrpc"]
categories = ["no-std"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.str-buf]
version = "2"
features = ["serde"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dev-dependencies.serde_json]
version = "1"
